--- a/style/styles.css
+++ b/style/styles.css
@@ -17,8 +17,15 @@ html, body {
     background-size: cover; /* This will cause the image to cover the entire screen */
     background-position: center; /* center the image */
     background-repeat: no-repeat; /* So that the image is not repeated */
+    opacity: 0; /* hide body site */
+    transition: opacity 2s ease-in-out;
     
 }
+
+body.loaded {
+  opacity: 1; /* body on */
+}
+
 .content {
     flex-grow: 1; 
 }
