--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,7 +264,7 @@ footer {
   .console-input {
     padding: 8px;
     font-size: 12px;
-    height: auto;
+    height: 100%;
     border-radius: 0;
   } 
   
@@ -289,7 +289,7 @@ footer {
   .console-input {
     padding: 8px;
     font-size: 12px;
-    height: auto;
+    height: 100%;
     border-radius: 0;
   }
   
