--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,11 +49,11 @@ body.loaded {
   font-family: "Courier New", Courier, monospace;
   white-space: pre-wrap;
   overflow-y: auto;
-  width: 97%;
+  width: auto;
 }
 
 .console-input {
-  width: 100%;
+  width: auto;
   padding: 12px;
   background-color: #000000;
   color: #00ff00;
@@ -100,7 +100,7 @@ body.loaded {
 
 /* Styles for the section with available commands */
 .help-section {
-  width: 95%;
+  width: auto;
   background-color: #222222d5;
   padding: 18px;
   border-top: 1px solid #00ff00;
