--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,7 @@ footer {
 
   .interactive-content {
     width: 90%;
-    height: auto;
+    height: 100vh;
     padding: 0;
     font-size: 16px;
     box-sizing: border-box;
@@ -300,6 +300,7 @@ footer {
 
   .interactive-content {
     width: 100%;
+    height: 100vh;
     padding: 5px;
     font-size: 14px;
     overflow: auto; 
