--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,9 +274,9 @@ footer {
   }
 
   iframe {
-    width: auto; 
-    height: auto; 
-    border: none; 
+    width: 100%;
+    height: 85vh; /* PDF  */
+    border: none;
   }
 }
 
@@ -312,7 +312,7 @@ footer {
 
   iframe {
     width: 100%;
-    height: 200px;
+    height: 75vh;
   }
 
   footer {
