--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* styles/styles.css */
 
-/* Basic style for the page */
+/* Basic style for the page*/
 body {
   font-family: Arial, sans-serif;
   background-color: #111;
@@ -8,25 +8,21 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column; /* Using flexbox with vertical layout */
   height: 100vh; 
-  background-image: url('foto/Afon.jpg'); 
+  background-image: url('foto/Afon.jpg'); /* Path to your image */
   background-size: cover; /* This will cause the image to cover the entire screen */
   background-position: center; /* center the image */
   background-repeat: no-repeat; /* So that the image is not repeated */
-  opacity: 0; /* hide body site */
-  transition: opacity 2s ease-in-out; 
 }
 
-body.loaded {
-  opacity: 1; /* body on */
-}
-
-/* Container for two parts of the page */
+/* Container for two parts of a page */
 .container {
   display: flex;
-  flex: 1; 
+  /*flex: 1; /* This block stretches to the remaining height. */
   width: 100%;
+  padding: 1px;
+  
 }
 
 /* Style for console (left column) */
@@ -34,45 +30,49 @@ body.loaded {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  
   align-items: stretch;
-  width: 50%; 
+  width: 45%; /* The left column takes up 50% of the screen */
   margin: 14px;
 }
 
 .console-output {
-  flex: 0 1 70%; 
+  flex: 0 1 70%; /* Fills 50% of the height */
+  max-height: 55vh; /* Maximum height */
   background-color: #000;
   border: 1px solid #00ff00;
   border-bottom: none;
   color: #00ff00;
   padding: 10px;
   font-family: "Courier New", Courier, monospace;
+  font-size: 16px; /* Set the font size */
   white-space: pre-wrap;
-  overflow-y: auto;
+  overflow-y: auto; /* Adding a scroll bar */
   width: auto;
 }
 
 .console-input {
+
   width: auto;
-  padding: 18px;
+  
   background-color: #000000;
   color: #00ff00;
   border: 1px solid #00ff00;
-  box-sizing: border-box;
   border-top: none;
   font-family: "Courier New", Courier, monospace;
   caret-color: #00ff00;
   outline: none;
-  font-size: 21px; 
-  display: flex;
+  font-size: 16px; /* Set the font size */
+  padding: 10px;
 }
 
 /* Style for the interactive part (right column) */
 .interactive-content {
-  width: 50%; 
-  height: 97%;
-  padding: 10px;
-  background-color: #d9d2b6ed; 
+  width: 55%; /* The right column takes up the remaining half. */
+  height: 107%;
+  margin-top: -54px; 
+  padding: 1px;
+  background-color: #d9d2b6ed; /*  background */
   /*background-image: url('foto/3028.jpg'); /* Path to your image */
   /*background-size: cover; /* This will cause the image to cover the entire screen */
   /*background-position: center; /* center the image */
@@ -82,13 +82,14 @@ body.loaded {
   align-items: center;
   font-size: 18px;
   flex-direction: column;
-  position: relative; 
-  overflow: hidden; 
-
+  position: relative; /* To ensure correct positioning inside */
+  overflow: hidden; /* To keep the content within the boundaries*/
+  justify-content: flex-start; /* Align content to top!!!!!!!!!!!!!! */
+  
 }
 .pdf-section {
   width: 100%; /* PDF block width */
-  height: 100%; /* Height stretches to cover entire container */
+  height: 100%; /* The height stretches across the entire container */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,58 +101,50 @@ body.loaded {
 
 /* Styles for the section with available commands */
 .help-section {
-  width: auto;
+  width:  auto;
+  height: 230px;
   background-color: #222222d5;
-  padding: 18px;
+  padding: 5px;
   border-top: 1px solid #00ff00;
   color: #fff;
   text-align: left;
-  margin-top: auto; 
+  /*margin-top: auto;  To keep the block pressed down */
 }
 
 .help-section h3 {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .help-section ul {
-  padding-left: 10px;
+  padding-left: 15px;
   column-count: 2; /* Split into two columns */
-  column-gap: 60px; /* Indentation between columns */
+  column-gap: 40px; /* Indentation between columns */
 }
+
 .command-link {
-  text-decoration: none; 
-  color: #00ff00; 
-  font-weight: bold; 
-  transition: all 0.3s ease; 
-  animation: flicker 0.1s infinite; 
+  text-decoration: none; /* Remove underscore */
+  color: #00ff00; /* Green color for links */
+  font-weight: bold; /*Bold text*/
+  transition: all 0.3s ease; /* Smooth transition for changes */
+  animation: flicker 0.1s infinite; /* Applying the flicker animation */
 }
+
 /* Flickering effect for commands */
 @keyframes flicker {
   0% {
-    color: #00ff00; 
+    color: #00ff00; /* Initial text color */
   }
   50% {
-    color: #ffffff; 
+    color: #ffffff; /* Half cycle - weit */
   }
   100% {
-    color: #00ff00; 
+    color: #00ff00; /* Final text color */
   }
-}
-
-.console-input {
-  padding: 8px;
-  font-size: 12px;  
-  height: auto;
-  border-radius: 0;
-} 
-  
-.console-output {
-  height: auto;
 }
 
 .command-link:hover {
-  color: #ff4500; 
-  font-size: 18px; 
+  color: #ff4500; /* Orange color on hover */
+  font-size: 18px; /* Increase size on hover */
 }
 
 .help-section li {
@@ -159,20 +152,20 @@ body.loaded {
 }
 
 
-
 /* Container for the button */
 .menu-container {
-  position: relative; 
+  position: relative; /* relative positioning to place the menu next to the button */
   display: inline-block;
   margin: 3px;
 }
 
-/* button */
+/* Button */
 .menu-button {
   background-color: #333333a4;
   color: white;
   border: none;
   padding: 5px 15px;
+  margin-left: 12px;
   cursor: pointer;
   font-size: 40px;
   border-radius: 5px;
@@ -187,9 +180,9 @@ body.loaded {
 
 /* Menu */
 .menu {
-  position: absolute; 
-  top: 0%; 
-  left: 20%;
+  position: absolute; /* Absolute positioning relative to container */
+  top: 0%; /* Place the menu immediately below the button */
+  left: 6%;
   background-color: #1e1d1d;
   color: rgb(253, 253, 253);
   border: 1px solid #259c00;
@@ -199,9 +192,14 @@ body.loaded {
   z-index: 1000;
 }
 
-/* hidden Menu */
+/* Hidden menu */
 .menu.hidden {
   display: none;
+}
+
+/* Show menu */
+.menu.show {
+  display: block; 
 }
 
 /* Styles for the menu list */
@@ -213,15 +211,15 @@ body.loaded {
 }
 
 .menu ul li {
-  margin: 0 10px; 
+  margin: 0 10px; /* Padding between icons */
   display: flex;
-  align-items: center; 
+  align-items: center; /* Center icons and text */
 }
 
 /* Icon for links in menu */
 .menu ul li i {
-  margin-right: 5px; 
-  font-size: 20px; 
+  margin-right: 5px; /* Space between icon and text */
+  font-size: 20px; /* Icon size */
 }
 
 .menu ul li a {
@@ -234,19 +232,46 @@ body.loaded {
   text-decoration: underline;
 }
 
-/* Footer */
+/* Футер */
 footer {
   text-align: center;
   color: #ffd500;
   background-color: #111;
-  padding: 10px;
+  padding: 0px;
   margin-top: auto; /* Pushes the footer down */
 }
+
+
+
+
 /* Adaptive for medium screens (up to 768px) */
 @media (max-width: 768px) {
+
   .container {
     flex-direction: column;
     align-items: center;
+  }
+  .menu {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    border-radius: 0;
+    padding: 15px;
+    text-align: center;
+  }
+
+  .menu ul {
+    flex-direction: column;
+  }
+
+  .menu ul li {
+    margin: 15px 0;
+  }
+
+  .menu-button {
+    font-size: 35px;
+    padding: 5px 10px;
   }
 
   .console {
@@ -254,12 +279,13 @@ footer {
   }
 
   .interactive-content {
-    width: 90%;
+    width: 100%;
     height: 100vh;
     padding: 0;
     font-size: 16px;
     box-sizing: border-box;
     overflow: auto; 
+    margin-top: -10px; 
   }
   
   .console-input {
@@ -275,7 +301,7 @@ footer {
 
   iframe {
     width: 50vh;
-    height: 85vh; /* PDF  */
+    height: 90vh; /* PDF  */
     border: none;
   }
 }
@@ -284,7 +310,29 @@ footer {
 @media (max-width: 480px) {
   body {
     font-size: 14px;
-    padding: 0;
+    padding: 5px;
+  }
+  .menu {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    border-radius: 0;
+    padding: 15px;
+    text-align: center;
+  }
+
+  .menu ul {
+    flex-direction: column;
+  }
+
+  .menu ul li {
+    margin: 15px 0;
+  }
+
+  .menu-button {
+    font-size: 35px;
+    padding: 5px 10px;
   }
 
   .console-input {
@@ -304,6 +352,7 @@ footer {
     padding: 5px;
     font-size: 14px;
     overflow: auto; 
+    margin-top: -10px; 
   }
 
   .help-section {
@@ -312,7 +361,7 @@ footer {
 
   iframe {
     width: 50vh;
-    height: 75vh;
+    height: 95vh;
   }
 
   footer {
